fixed, in ie you need to set z-index -1 on the positioned lower element

--- a/htdocs/css/shared.css
+++ b/htdocs/css/shared.css
@@ -39,6 +39,8 @@ p#margin-spacer {
 
 body div#main {
         width:100%;	
+        position:relative;
+        z-index:-1;
 }
 
 /**End General Rules**/
